[gd_scene load_steps=22 format=3 uid="uid://b8pusx861otge"]

[ext_resource type="Script" path="res://scripts/options_in_game.gd" id="1_8jcjy"]
[ext_resource type="FontFile" uid="uid://dma36ayybtqgh" path="res://assets/fonts/alagard/alagard.ttf" id="1_ccci1"]
[ext_resource type="Texture2D" uid="uid://fvjvcq6vc887" path="res://assets/UI/Slider/Grabber3x.png" id="2_jeoss"]
[ext_resource type="Texture2D" uid="uid://dgavtpjegrjip" path="res://assets/UI/CheckBox/On.png" id="3_ahht0"]
[ext_resource type="Texture2D" uid="uid://cjroaqp88kkxf" path="res://assets/UI/CheckBox/Off.png" id="4_dmiac"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_g4w6y"]
color = Color(0.933333, 0.960784, 0.419608, 1)
thickness = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aetvb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sp3s3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o2ou0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0xn6p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n6ral"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ug814"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yftsj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ax5a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_56pys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vl3ib"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lh8se"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jqd71"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rmsnj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t0x66"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_emv8m"]

[node name="Options_In_Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8jcjy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.537255)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.913725, 0.607843, 0.184314, 1)
theme_override_fonts/font = ExtResource("1_ccci1")
theme_override_font_sizes/font_size = 96
text = "Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 144

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.607843, 0.184314, 1)
theme_override_fonts/font = ExtResource("1_ccci1")
theme_override_font_sizes/font_size = 64
text = "Master"

[node name="Master_Volume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("2_jeoss")
theme_override_icons/grabber_highlight = ExtResource("2_jeoss")
theme_override_icons/grabber_disabled = ExtResource("2_jeoss")
theme_override_icons/tick = ExtResource("2_jeoss")
theme_override_styles/slider = SubResource("StyleBoxLine_g4w6y")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_aetvb")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_sp3s3")
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 172

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.607843, 0.184314, 1)
theme_override_fonts/font = ExtResource("1_ccci1")
theme_override_font_sizes/font_size = 64
text = "Music"

[node name="Music_Volume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("2_jeoss")
theme_override_icons/grabber_highlight = ExtResource("2_jeoss")
theme_override_icons/grabber_disabled = ExtResource("2_jeoss")
theme_override_icons/tick = ExtResource("2_jeoss")
theme_override_styles/slider = SubResource("StyleBoxLine_g4w6y")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_aetvb")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_sp3s3")
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 228

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.607843, 0.184314, 1)
theme_override_fonts/font = ExtResource("1_ccci1")
theme_override_font_sizes/font_size = 64
text = "SFX"

[node name="SFX_Volume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("2_jeoss")
theme_override_icons/grabber_highlight = ExtResource("2_jeoss")
theme_override_icons/grabber_disabled = ExtResource("2_jeoss")
theme_override_icons/tick = ExtResource("2_jeoss")
theme_override_styles/slider = SubResource("StyleBoxLine_g4w6y")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_aetvb")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_sp3s3")
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.607843, 0.184314, 1)
theme_override_fonts/font = ExtResource("1_ccci1")
theme_override_font_sizes/font_size = 64
text = "Ambiance"

[node name="Ambiance_Volume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("2_jeoss")
theme_override_icons/grabber_highlight = ExtResource("2_jeoss")
theme_override_icons/grabber_disabled = ExtResource("2_jeoss")
theme_override_icons/tick = ExtResource("2_jeoss")
theme_override_styles/slider = SubResource("StyleBoxLine_g4w6y")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_aetvb")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_sp3s3")
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.913725, 0.607843, 0.184314, 1)
theme_override_fonts/font = ExtResource("1_ccci1")
theme_override_font_sizes/font_size = 96
text = "Fullscreen"

[node name="FullscreenButton" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_o2ou0")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0xn6p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n6ral")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ug814")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yftsj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1ax5a")
theme_override_styles/hover = SubResource("StyleBoxEmpty_56pys")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_vl3ib")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lh8se")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jqd71")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rmsnj")
theme_override_icons/checked = ExtResource("3_ahht0")
theme_override_icons/unchecked = ExtResource("4_dmiac")
button_pressed = true

[node name="Back_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_colors/font_hover_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_pressed_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_focus_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_color = Color(0.984314, 0.572549, 0.168627, 1)
theme_override_fonts/font = ExtResource("1_ccci1")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxEmpty_t0x66")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_emv8m")
text = "Back"
flat = true
alignment = 0

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Master_Volume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/Music_Volume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/SFX_Volume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer5/Ambiance_Volume" to="." method="_on_ambiance_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer4/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back_button" to="." method="_on_back_button_pressed"]
